--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: Test React App
+name: Deploy React App
 
 # Controls when the workflow will run
 on:
@@ -44,6 +44,7 @@ jobs:
       #     echo Add other actions to build,
       #     echo test, and deploy your project.
   deploy:
+    needs: test
     runs-on: ubuntu-latest
     steps:
       - name: Get code
